tests/snapshots/run_wpt_conformance__trtx_logicalNot_uint8_1D_constant_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
logical_not.https.any.js logicalNot uint8 1D constant tensor, trtx
 logical_not :: logicalNot uint8 1D constant tensor: index 0: actual=1 expected=0 tolerance=0
  inputs: logicalNotInput: [204, 130, 90, 0, 147, 42, 10, 18, 13, 235, 0, 233, 53, 83, 9, 254, 69, 56, 219, 109, 171, 0, 228, 135] (constant)
  expected logicalNotOutput: [0, 0, 0, 1, 0, 0, 0, 0, 0, 0 ...] (len=24)
  actual logicalNotOutput: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ...] (len=24)
  expected logicalNotOutput full nd:
[0, 0, 0, 1, 0, 0, 0, 0, 0, 0, ...] (len=24, shape=[24])
  actual logicalNotOutput full nd:
[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...] (len=24, shape=[24])

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: u8[24] @bytes([204, 130, 90, 0, 147, 42, 10, 18, 13, 235, 0, 233, 53, 83, 9, 254, 69, 56, 219, 109, 171, 0, 228, 135]);
  }

  nodes {
    [logicalNotOutput] = logicalNot(operand_0, label="");
  }

  outputs { logicalNotOutput; }
}
