tests/snapshots/run_wpt_conformance__trtx_logicalNot_uint8_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "logical_not.https.any.js",
    "logicalNot uint8 1D tensor",
    "trtx",
    Failed {
        msg: Some(
            "logical_not :: logicalNot uint8 1D tensor: index 3: actual=0 expected=1 tolerance=0\n  inputs: logicalNotInput: [204, 130, 90, 0, 147, 42, 10, 18, 13, 235, 0, 233, 53, 83, 9, 254, 69, 56, 219, 109, 171, 0, 228, 135]\n  expected logicalNotOutput: [0, 0, 0, 1, 0, 0, 0, 0, 0, 0 ...] (len=24)\n  actual logicalNotOutput: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ...] (len=24)\n  expected logicalNotOutput full nd:\n[0, 0, 0, 1, 0, 0, 0, 0, 0, 0, ...] (len=24, shape=[24])\n  actual logicalNotOutput full nd:\n[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...] (len=24, shape=[24])\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    logicalNotInput: u8[24];\n  }\n\n  nodes {\n    [logicalNotOutput] = logicalNot(logicalNotInput, label=\"\");\n  }\n\n  outputs { logicalNotOutput; }\n}\n",
        ),
    },
)
